Attempt 2 to fix h2 overflow

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h2 {
     background-color: black;
     border-radius: 10px;
     padding: 1em;
-    min-height: 2em;
+    height:auto;
 }
 
 body {
